GeneratedCompiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> PROGRAM ID LEFTBRACKET variable block RIGHTBRACKET
Rule 2     variable -> VAR ID variables COLON datatype SEMICOLON variable
Rule 3     variable -> empty
Rule 4     variables -> COMMA ID variables
Rule 5     variables -> empty
Rule 6     datatype -> INT
Rule 7     datatype -> REAL
Rule 8     datatype -> BOOL
Rule 9     datatype -> STR
Rule 10    block -> BEGIN SEMICOLON statement END SEMICOLON
Rule 11    statement -> writestatement statement
Rule 12    statement -> assignstatement statement
Rule 13    statement -> ifstatement statement
Rule 14    statement -> whileloop statement
Rule 15    statement -> forloop statement
Rule 16    statement -> empty
Rule 17    writestatement -> WRITE LEFTPARENTHESIS expression RIGHTPARENTHESIS SEMICOLON
Rule 18    assignstatement -> ID ASSIGN expression SEMICOLON
Rule 19    ifstatement -> IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET elsestatement
Rule 20    elsestatement -> ELSE LEFTBRACKET statement RIGHTBRACKET
Rule 21    elsestatement -> empty
Rule 22    whileloop -> WHILE LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
Rule 23    forloop -> FOR LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON formodifier RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET
Rule 24    formodifier -> ID PLUSPLUS
Rule 25    formodifier -> ID MINUSMINUS
Rule 26    expression -> simpleexpression
Rule 27    expression -> simpleexpression relationaloperators simpleexpression
Rule 28    relationaloperators -> EQUAL
Rule 29    relationaloperators -> LESSER
Rule 30    relationaloperators -> GREATER
Rule 31    relationaloperators -> LESSEREQUAL
Rule 32    relationaloperators -> GREATEREQUAL
Rule 33    simpleexpression -> term
Rule 34    simpleexpression -> term PLUS simpleexpression
Rule 35    simpleexpression -> term MINUS simpleexpression
Rule 36    simpleexpression -> term OR simpleexpression
Rule 37    term -> fact
Rule 38    term -> fact TIMES term
Rule 39    term -> fact MINUS term
Rule 40    term -> fact DIVIDE term
Rule 41    term -> fact AND term
Rule 42    fact -> unaryoperator ID
Rule 43    fact -> unaryoperator LEFTPARENTHESIS expression RIGHTPARENTHESIS
Rule 44    fact -> unaryoperator INTEGER
Rule 45    fact -> unaryoperator NUMBER
Rule 46    fact -> unaryoperator STRING
Rule 47    fact -> unaryoperator BOOLEAN
Rule 48    unaryoperator -> PLUS
Rule 49    unaryoperator -> MINUS
Rule 50    unaryoperator -> empty
Rule 51    empty -> <empty>

Terminals, with rules where they appear

AND                  : 41
ASSIGN               : 18 23
BEGIN                : 10
BOOL                 : 8
BOOLEAN              : 47
COLON                : 2
COMMA                : 4
DIVIDE               : 40
DO                   : 22
ELSE                 : 20
END                  : 10
EQUAL                : 28
FOR                  : 23
GREATER              : 30
GREATEREQUAL         : 32
ID                   : 1 2 4 18 23 24 25 42
IF                   : 19
INT                  : 6
INTEGER              : 44
LEFTBRACKET          : 1 19 20 22 23
LEFTPARENTHESIS      : 17 19 22 23 43
LESSER               : 29
LESSEREQUAL          : 31
MINUS                : 35 39 49
MINUSMINUS           : 25
NUMBER               : 45
OR                   : 36
PLUS                 : 34 48
PLUSPLUS             : 24
PROGRAM              : 1
REAL                 : 7
RIGHTBRACKET         : 1 19 20 22 23
RIGHTPARENTHESIS     : 17 19 22 23 43
SEMICOLON            : 2 10 10 17 18 23 23
STR                  : 9
STRING               : 46
THEN                 : 19
TIMES                : 38
VAR                  : 2
WHILE                : 22
WRITE                : 17
error                : 

Nonterminals, with rules where they appear

Program              : 0
assignstatement      : 12
block                : 1
datatype             : 2
elsestatement        : 19
empty                : 3 5 16 21 50
expression           : 17 18 19 22 23 23 43
fact                 : 37 38 39 40 41
forloop              : 15
formodifier          : 23
ifstatement          : 13
relationaloperators  : 27
simpleexpression     : 26 27 27 34 35 36
statement            : 10 11 12 13 14 15 19 20 22 23
term                 : 33 34 35 36 38 39 40 41
unaryoperator        : 42 43 44 45 46 47
variable             : 1 2
variables            : 2 4
whileloop            : 14
writestatement       : 11

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . PROGRAM ID LEFTBRACKET variable block RIGHTBRACKET

    PROGRAM         shift and go to state 2

    Program                        shift and go to state 1

state 1

    (0) S' -> Program .



state 2

    (1) Program -> PROGRAM . ID LEFTBRACKET variable block RIGHTBRACKET

    ID              shift and go to state 3


state 3

    (1) Program -> PROGRAM ID . LEFTBRACKET variable block RIGHTBRACKET

    LEFTBRACKET     shift and go to state 4


state 4

    (1) Program -> PROGRAM ID LEFTBRACKET . variable block RIGHTBRACKET
    (2) variable -> . VAR ID variables COLON datatype SEMICOLON variable
    (3) variable -> . empty
    (51) empty -> .

    VAR             shift and go to state 6
    BEGIN           reduce using rule 51 (empty -> .)

    variable                       shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) Program -> PROGRAM ID LEFTBRACKET variable . block RIGHTBRACKET
    (10) block -> . BEGIN SEMICOLON statement END SEMICOLON

    BEGIN           shift and go to state 9

    block                          shift and go to state 8

state 6

    (2) variable -> VAR . ID variables COLON datatype SEMICOLON variable

    ID              shift and go to state 10


state 7

    (3) variable -> empty .

    BEGIN           reduce using rule 3 (variable -> empty .)


state 8

    (1) Program -> PROGRAM ID LEFTBRACKET variable block . RIGHTBRACKET

    RIGHTBRACKET    shift and go to state 11


state 9

    (10) block -> BEGIN . SEMICOLON statement END SEMICOLON

    SEMICOLON       shift and go to state 12


state 10

    (2) variable -> VAR ID . variables COLON datatype SEMICOLON variable
    (4) variables -> . COMMA ID variables
    (5) variables -> . empty
    (51) empty -> .

    COMMA           shift and go to state 14
    COLON           reduce using rule 51 (empty -> .)

    variables                      shift and go to state 13
    empty                          shift and go to state 15

state 11

    (1) Program -> PROGRAM ID LEFTBRACKET variable block RIGHTBRACKET .

    $end            reduce using rule 1 (Program -> PROGRAM ID LEFTBRACKET variable block RIGHTBRACKET .)


state 12

    (10) block -> BEGIN SEMICOLON . statement END SEMICOLON
    (11) statement -> . writestatement statement
    (12) statement -> . assignstatement statement
    (13) statement -> . ifstatement statement
    (14) statement -> . whileloop statement
    (15) statement -> . forloop statement
    (16) statement -> . empty
    (17) writestatement -> . WRITE LEFTPARENTHESIS expression RIGHTPARENTHESIS SEMICOLON
    (18) assignstatement -> . ID ASSIGN expression SEMICOLON
    (19) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET elsestatement
    (22) whileloop -> . WHILE LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
    (23) forloop -> . FOR LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON formodifier RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET
    (51) empty -> .

    WRITE           shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    END             reduce using rule 51 (empty -> .)

    statement                      shift and go to state 16
    writestatement                 shift and go to state 17
    assignstatement                shift and go to state 18
    ifstatement                    shift and go to state 19
    whileloop                      shift and go to state 20
    forloop                        shift and go to state 21
    empty                          shift and go to state 22

state 13

    (2) variable -> VAR ID variables . COLON datatype SEMICOLON variable

    COLON           shift and go to state 28


state 14

    (4) variables -> COMMA . ID variables

    ID              shift and go to state 29


state 15

    (5) variables -> empty .

    COLON           reduce using rule 5 (variables -> empty .)


state 16

    (10) block -> BEGIN SEMICOLON statement . END SEMICOLON

    END             shift and go to state 30


state 17

    (11) statement -> writestatement . statement
    (11) statement -> . writestatement statement
    (12) statement -> . assignstatement statement
    (13) statement -> . ifstatement statement
    (14) statement -> . whileloop statement
    (15) statement -> . forloop statement
    (16) statement -> . empty
    (17) writestatement -> . WRITE LEFTPARENTHESIS expression RIGHTPARENTHESIS SEMICOLON
    (18) assignstatement -> . ID ASSIGN expression SEMICOLON
    (19) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET elsestatement
    (22) whileloop -> . WHILE LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
    (23) forloop -> . FOR LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON formodifier RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET
    (51) empty -> .

    WRITE           shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    END             reduce using rule 51 (empty -> .)
    RIGHTBRACKET    reduce using rule 51 (empty -> .)

    writestatement                 shift and go to state 17
    statement                      shift and go to state 31
    assignstatement                shift and go to state 18
    ifstatement                    shift and go to state 19
    whileloop                      shift and go to state 20
    forloop                        shift and go to state 21
    empty                          shift and go to state 22

state 18

    (12) statement -> assignstatement . statement
    (11) statement -> . writestatement statement
    (12) statement -> . assignstatement statement
    (13) statement -> . ifstatement statement
    (14) statement -> . whileloop statement
    (15) statement -> . forloop statement
    (16) statement -> . empty
    (17) writestatement -> . WRITE LEFTPARENTHESIS expression RIGHTPARENTHESIS SEMICOLON
    (18) assignstatement -> . ID ASSIGN expression SEMICOLON
    (19) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET elsestatement
    (22) whileloop -> . WHILE LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
    (23) forloop -> . FOR LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON formodifier RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET
    (51) empty -> .

    WRITE           shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    END             reduce using rule 51 (empty -> .)
    RIGHTBRACKET    reduce using rule 51 (empty -> .)

    assignstatement                shift and go to state 18
    statement                      shift and go to state 32
    writestatement                 shift and go to state 17
    ifstatement                    shift and go to state 19
    whileloop                      shift and go to state 20
    forloop                        shift and go to state 21
    empty                          shift and go to state 22

state 19

    (13) statement -> ifstatement . statement
    (11) statement -> . writestatement statement
    (12) statement -> . assignstatement statement
    (13) statement -> . ifstatement statement
    (14) statement -> . whileloop statement
    (15) statement -> . forloop statement
    (16) statement -> . empty
    (17) writestatement -> . WRITE LEFTPARENTHESIS expression RIGHTPARENTHESIS SEMICOLON
    (18) assignstatement -> . ID ASSIGN expression SEMICOLON
    (19) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET elsestatement
    (22) whileloop -> . WHILE LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
    (23) forloop -> . FOR LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON formodifier RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET
    (51) empty -> .

    WRITE           shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    END             reduce using rule 51 (empty -> .)
    RIGHTBRACKET    reduce using rule 51 (empty -> .)

    ifstatement                    shift and go to state 19
    statement                      shift and go to state 33
    writestatement                 shift and go to state 17
    assignstatement                shift and go to state 18
    whileloop                      shift and go to state 20
    forloop                        shift and go to state 21
    empty                          shift and go to state 22

state 20

    (14) statement -> whileloop . statement
    (11) statement -> . writestatement statement
    (12) statement -> . assignstatement statement
    (13) statement -> . ifstatement statement
    (14) statement -> . whileloop statement
    (15) statement -> . forloop statement
    (16) statement -> . empty
    (17) writestatement -> . WRITE LEFTPARENTHESIS expression RIGHTPARENTHESIS SEMICOLON
    (18) assignstatement -> . ID ASSIGN expression SEMICOLON
    (19) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET elsestatement
    (22) whileloop -> . WHILE LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
    (23) forloop -> . FOR LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON formodifier RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET
    (51) empty -> .

    WRITE           shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    END             reduce using rule 51 (empty -> .)
    RIGHTBRACKET    reduce using rule 51 (empty -> .)

    whileloop                      shift and go to state 20
    statement                      shift and go to state 34
    writestatement                 shift and go to state 17
    assignstatement                shift and go to state 18
    ifstatement                    shift and go to state 19
    forloop                        shift and go to state 21
    empty                          shift and go to state 22

state 21

    (15) statement -> forloop . statement
    (11) statement -> . writestatement statement
    (12) statement -> . assignstatement statement
    (13) statement -> . ifstatement statement
    (14) statement -> . whileloop statement
    (15) statement -> . forloop statement
    (16) statement -> . empty
    (17) writestatement -> . WRITE LEFTPARENTHESIS expression RIGHTPARENTHESIS SEMICOLON
    (18) assignstatement -> . ID ASSIGN expression SEMICOLON
    (19) ifstatement -> . IF LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET elsestatement
    (22) whileloop -> . WHILE LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
    (23) forloop -> . FOR LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON formodifier RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET
    (51) empty -> .

    WRITE           shift and go to state 23
    ID              shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    END             reduce using rule 51 (empty -> .)
    RIGHTBRACKET    reduce using rule 51 (empty -> .)

    forloop                        shift and go to state 21
    statement                      shift and go to state 35
    writestatement                 shift and go to state 17
    assignstatement                shift and go to state 18
    ifstatement                    shift and go to state 19
    whileloop                      shift and go to state 20
    empty                          shift and go to state 22

state 22

    (16) statement -> empty .

    END             reduce using rule 16 (statement -> empty .)
    RIGHTBRACKET    reduce using rule 16 (statement -> empty .)


state 23

    (17) writestatement -> WRITE . LEFTPARENTHESIS expression RIGHTPARENTHESIS SEMICOLON

    LEFTPARENTHESIS shift and go to state 36


state 24

    (18) assignstatement -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 37


state 25

    (19) ifstatement -> IF . LEFTPARENTHESIS expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET elsestatement

    LEFTPARENTHESIS shift and go to state 38


state 26

    (22) whileloop -> WHILE . LEFTPARENTHESIS expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET

    LEFTPARENTHESIS shift and go to state 39


state 27

    (23) forloop -> FOR . LEFTPARENTHESIS ID ASSIGN expression SEMICOLON expression SEMICOLON formodifier RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET

    LEFTPARENTHESIS shift and go to state 40


state 28

    (2) variable -> VAR ID variables COLON . datatype SEMICOLON variable
    (6) datatype -> . INT
    (7) datatype -> . REAL
    (8) datatype -> . BOOL
    (9) datatype -> . STR

    INT             shift and go to state 42
    REAL            shift and go to state 43
    BOOL            shift and go to state 44
    STR             shift and go to state 45

    datatype                       shift and go to state 41

state 29

    (4) variables -> COMMA ID . variables
    (4) variables -> . COMMA ID variables
    (5) variables -> . empty
    (51) empty -> .

    COMMA           shift and go to state 14
    COLON           reduce using rule 51 (empty -> .)

    variables                      shift and go to state 46
    empty                          shift and go to state 15

state 30

    (10) block -> BEGIN SEMICOLON statement END . SEMICOLON

    SEMICOLON       shift and go to state 47


state 31

    (11) statement -> writestatement statement .

    END             reduce using rule 11 (statement -> writestatement statement .)
    RIGHTBRACKET    reduce using rule 11 (statement -> writestatement statement .)


state 32

    (12) statement -> assignstatement statement .

    END             reduce using rule 12 (statement -> assignstatement statement .)
    RIGHTBRACKET    reduce using rule 12 (statement -> assignstatement statement .)


state 33

    (13) statement -> ifstatement statement .

    END             reduce using rule 13 (statement -> ifstatement statement .)
    RIGHTBRACKET    reduce using rule 13 (statement -> ifstatement statement .)


state 34

    (14) statement -> whileloop statement .

    END             reduce using rule 14 (statement -> whileloop statement .)
    RIGHTBRACKET    reduce using rule 14 (statement -> whileloop statement .)


state 35

    (15) statement -> forloop statement .

    END             reduce using rule 15 (statement -> forloop statement .)
    RIGHTBRACKET    reduce using rule 15 (statement -> forloop statement .)


state 36

    (17) writestatement -> WRITE LEFTPARENTHESIS . expression RIGHTPARENTHESIS SEMICOLON
    (26) expression -> . simpleexpression
    (27) expression -> . simpleexpression relationaloperators simpleexpression
    (33) simpleexpression -> . term
    (34) simpleexpression -> . term PLUS simpleexpression
    (35) simpleexpression -> . term MINUS simpleexpression
    (36) simpleexpression -> . term OR simpleexpression
    (37) term -> . fact
    (38) term -> . fact TIMES term
    (39) term -> . fact MINUS term
    (40) term -> . fact DIVIDE term
    (41) term -> . fact AND term
    (42) fact -> . unaryoperator ID
    (43) fact -> . unaryoperator LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (44) fact -> . unaryoperator INTEGER
    (45) fact -> . unaryoperator NUMBER
    (46) fact -> . unaryoperator STRING
    (47) fact -> . unaryoperator BOOLEAN
    (48) unaryoperator -> . PLUS
    (49) unaryoperator -> . MINUS
    (50) unaryoperator -> . empty
    (51) empty -> .

    PLUS            shift and go to state 51
    MINUS           shift and go to state 52
    ID              reduce using rule 51 (empty -> .)
    LEFTPARENTHESIS reduce using rule 51 (empty -> .)
    INTEGER         reduce using rule 51 (empty -> .)
    NUMBER          reduce using rule 51 (empty -> .)
    STRING          reduce using rule 51 (empty -> .)
    BOOLEAN         reduce using rule 51 (empty -> .)

    expression                     shift and go to state 48
    simpleexpression               shift and go to state 49
    term                           shift and go to state 50
    fact                           shift and go to state 53
    unaryoperator                  shift and go to state 54
    empty                          shift and go to state 55

state 37

    (18) assignstatement -> ID ASSIGN . expression SEMICOLON
    (26) expression -> . simpleexpression
    (27) expression -> . simpleexpression relationaloperators simpleexpression
    (33) simpleexpression -> . term
    (34) simpleexpression -> . term PLUS simpleexpression
    (35) simpleexpression -> . term MINUS simpleexpression
    (36) simpleexpression -> . term OR simpleexpression
    (37) term -> . fact
    (38) term -> . fact TIMES term
    (39) term -> . fact MINUS term
    (40) term -> . fact DIVIDE term
    (41) term -> . fact AND term
    (42) fact -> . unaryoperator ID
    (43) fact -> . unaryoperator LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (44) fact -> . unaryoperator INTEGER
    (45) fact -> . unaryoperator NUMBER
    (46) fact -> . unaryoperator STRING
    (47) fact -> . unaryoperator BOOLEAN
    (48) unaryoperator -> . PLUS
    (49) unaryoperator -> . MINUS
    (50) unaryoperator -> . empty
    (51) empty -> .

    PLUS            shift and go to state 51
    MINUS           shift and go to state 52
    ID              reduce using rule 51 (empty -> .)
    LEFTPARENTHESIS reduce using rule 51 (empty -> .)
    INTEGER         reduce using rule 51 (empty -> .)
    NUMBER          reduce using rule 51 (empty -> .)
    STRING          reduce using rule 51 (empty -> .)
    BOOLEAN         reduce using rule 51 (empty -> .)

    expression                     shift and go to state 56
    simpleexpression               shift and go to state 49
    term                           shift and go to state 50
    fact                           shift and go to state 53
    unaryoperator                  shift and go to state 54
    empty                          shift and go to state 55

state 38

    (19) ifstatement -> IF LEFTPARENTHESIS . expression RIGHTPARENTHESIS THEN LEFTBRACKET statement RIGHTBRACKET elsestatement
    (26) expression -> . simpleexpression
    (27) expression -> . simpleexpression relationaloperators simpleexpression
    (33) simpleexpression -> . term
    (34) simpleexpression -> . term PLUS simpleexpression
    (35) simpleexpression -> . term MINUS simpleexpression
    (36) simpleexpression -> . term OR simpleexpression
    (37) term -> . fact
    (38) term -> . fact TIMES term
    (39) term -> . fact MINUS term
    (40) term -> . fact DIVIDE term
    (41) term -> . fact AND term
    (42) fact -> . unaryoperator ID
    (43) fact -> . unaryoperator LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (44) fact -> . unaryoperator INTEGER
    (45) fact -> . unaryoperator NUMBER
    (46) fact -> . unaryoperator STRING
    (47) fact -> . unaryoperator BOOLEAN
    (48) unaryoperator -> . PLUS
    (49) unaryoperator -> . MINUS
    (50) unaryoperator -> . empty
    (51) empty -> .

    PLUS            shift and go to state 51
    MINUS           shift and go to state 52
    ID              reduce using rule 51 (empty -> .)
    LEFTPARENTHESIS reduce using rule 51 (empty -> .)
    INTEGER         reduce using rule 51 (empty -> .)
    NUMBER          reduce using rule 51 (empty -> .)
    STRING          reduce using rule 51 (empty -> .)
    BOOLEAN         reduce using rule 51 (empty -> .)

    expression                     shift and go to state 57
    simpleexpression               shift and go to state 49
    term                           shift and go to state 50
    fact                           shift and go to state 53
    unaryoperator                  shift and go to state 54
    empty                          shift and go to state 55

state 39

    (22) whileloop -> WHILE LEFTPARENTHESIS . expression RIGHTPARENTHESIS DO LEFTBRACKET statement RIGHTBRACKET
    (26) expression -> . simpleexpression
    (27) expression -> . simpleexpression relationaloperators simpleexpression
    (33) simpleexpression -> . term
    (34) simpleexpression -> . term PLUS simpleexpression
    (35) simpleexpression -> . term MINUS simpleexpression
    (36) simpleexpression -> . term OR simpleexpression
    (37) term -> . fact
    (38) term -> . fact TIMES term
    (39) term -> . fact MINUS term
    (40) term -> . fact DIVIDE term
    (41) term -> . fact AND term
    (42) fact -> . unaryoperator ID
    (43) fact -> . unaryoperator LEFTPARENTHESIS expression RIGHTPARENTHESIS
    (44) fact -> . unaryoperator INTEGER
    (45) fact -> . unaryoperator NUMBER
    (46) fact -> . unaryoperator STRING
    (47) fact -> . unaryoperator BOOLEAN
    (48) unaryoperator -> . PLUS
    (49) unaryoperator -> . MINUS
    (50) unaryoperator -> . empty
    (51) empty -> .

    PLUS            shift and go to state 51
    MINUS           shift and go to state 52
    ID              reduce using rule 51 (empty -> .)
    LEFTPARENTHESIS reduce using rule 51 (empty -> .)
    INTEGER         reduce using rule 51 (empty -> .)
    NUMBER          reduce using rule 51 (empty -> .)
    STRING          reduce using rule 51 (empty -> .)
    BOOLEAN         reduce using rule 51 (empty -> .)

    expression                     shift and go to state 58
    simpleexpression               shift and go to state 49
    term                           shift and go to state 50
    fact                           shift and go to state 53
    unaryoperator                  shift and go to state 54
    empty                          shift and go to state 55

state 40

    (23) forloop -> FOR LEFTPARENTHESIS . ID ASSIGN expression SEMICOLON expression SEMICOLON formodifier RIGHTPARENTHESIS LEFTBRACKET statement RIGHTBRACKET

    ID              shift and go to state 59


state 41

    (2) variable -> VAR ID variables COLON datatype . SEMICOLON variable

    SEMICOLON       shift and go to state 60


state 42

    (6) datatype -> INT .

    SEMICOLON       reduce using rule 6 (datatype -> INT .)


state 43

    (7) datatype -> REAL .

    SEMICOLON       reduce using rule 7 (datatype -> REAL .)


state 44

    (8) datatype -> BOOL .

    SEMICOLON       reduce using rule 8 (datatype -> BOOL .)


state 45

    (9) datatype -> STR .

    SEMICOLON       reduce using rule 9 (datatype -> STR .)


state 46

    (4) variables -> COMMA ID variables .

    COLON           reduce using rule 4 (variables -> COMMA ID variables .)


state 47

    (10) block -> BEGIN SEMICOLON statement END SEMICOLON .

    RIGHTBRACKET    reduce using rule 10 (block -> BEGIN SEMICOLON statement END SEMICOLON .)


state 48

    (17) writestatement -> WRITE LEFTPARENTHESIS expression . RIGHTPARENTHESIS SEMICOLON

    RIGHTPARENTHESIS shift and go to state 61


state 49

    (26) expression -> simpleexpression .
    (27) expression -> simpleexpression . relationaloperators simpleexpression
    (28) relationaloperators -> . EQUAL
    (29) relationaloperators -> . LESSER
    (30) relationaloperators -> . GREATER
    (31) relationaloperators -> . LESSEREQUAL
    (32) relationaloperators -> . GREATEREQUAL

    RIGHTPARENTHESIS reduce using rule 26 (expression -> simpleexpression .)
    SEMICOLON       reduce using rule 26 (expression -> simpleexpression .)
    EQUAL           shift and go to state 63
    LESSER          shift and go to state 64
    GREATER         shift and go to state 65
    LESSEREQUAL     shift and go to state 66
    GREATEREQUAL    shift and go to state 67
